# BigSig

./: Cargo.toml  README.md
src/: batch_search_pe.rs  bigsi.rs  build.rs  build_ex.rs  kmer.rs  lib.rs  main.rs  perfect_search.rs  read_filter.rs  read_id_batch.rs  read_id_mt_pe.rs  simple_bloom.rs
